--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "aplui",
   "license": "ISC",
   "dependencies": {
+    "discord.js": "^12.5.3",
+    "dotenv": "^8.2.0",
     "puppeteer": "^9.0.0"
   }
 }
